--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculator",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "http://ahfarmer.github.io/calculator",
+  "homepage": "http://panpan.dk/calculator",
   "devDependencies": {
     "chai": "^4.1.2",
     "gh-pages": "^1.1.0",
