--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "calculator",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "http://panpan.dk/calculator",
+  "homepage": "https://panpan31415.github.io/calculator",
   "devDependencies": {
     "chai": "^4.1.2",
-    "gh-pages": "^1.1.0",
+    "gh-pages": "^1.2.0",
     "prettier": "1.13.0",
     "react-scripts": "^1.1.4"
   },
@@ -20,6 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "prettier": {
